# bia_matcher

./: .env  .gitignore  Cargo.toml  DOCUMENT_MATCHING_PROCESS.md  EMBEDDING_IMPLEMENTATION.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  ENHANCED_MATCHING_APPROACH.md  IMPLEMENTATION_SUMMARY.md  Matching.md  README.md  dataset.json  dye.html  enhanced_matching_demo.sh  enhanced_matching_test.rs  file_list.txt  final_demo.sh  gather_samples.sh  listing.txt  matching_example.sh  qdrant_config.yaml  sample_output_backup.json  samples.txt  schema.txt  test_qdrant.rs
output/: LB-Epistola al Hijo del Lobo_processed_matches copy.json  LB-Epistola al Hijo del Lobo_processed_matches.json  Las Palabras Ocultas_con cambios aprobados_11enero2022_processed_matches copy.json  Las Palabras Ocultas_con cambios aprobados_11enero2022_processed_matches.json
pdf_source_inputs/: Las Palabras Ocultas_con cambios aprobados_11enero2022_processed.json
pdf_source_inputs/subdir1/: LB-Epistola al Hijo del Lobo_processed.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/xml_documents/: config.json
ref_xml-json/abdul-baha/: paris-talks.json  some-answered-questions.json  tablets-hague-abdul-baha.json
ref_xml-json/bahaullah/: call-divine-beloved.json  prayers-meditations.json  tablets-bahaullah.json
src/: document_matcher.rs  embedding_service.rs  error.rs  faiss_service.rs  lib.rs  main.rs  models.rs  similarity_search.rs
xml_json_inputs/ref_xml-json/abdul-baha/: light-of-the-world.json  memorials-faithful.json  prayers-abdul-baha.json  promulgation-universal-peace.json  secret-divine-civilization.json  selections-writings-abdul-baha.json  tablet-august-forel.json  tablets-divine-plan.json  (+3 more)
(+67 files in other folders)
