[package]
name = "matching"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
tempfile = "3.0"
