[package]
name = "matching"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP client for llama.cpp server
reqwest = { version = "0.11", features = ["json"] }
# Qdrant client for vector search
qdrant-client = "1.15.0"
# For handling vectors
ndarray = "0.15.4"

[[example]]
name = "test_qdrant"
path = "test_qdrant.rs"

[[example]]
name = "enhanced_matching_test"
path = "enhanced_matching_test.rs"
